--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@
 }
 .srv_slide_middle_msg {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 0;
   width: 50vw;
   height: 30vh;
@@ -165,7 +165,7 @@
 .cat_wrapper {
   position: absolute;
   background-color: transparent;
-  width: 70vw;
+  width: 100vw;
   height: 70vh;
   top: 50%;
   left: 50%;
@@ -182,7 +182,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .cat_top .cat_top_header {
   display: flex;
@@ -200,7 +200,7 @@
 .cat_img_holder {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 45vh;
 }
 .cat_img_card1,
@@ -211,7 +211,7 @@
   justify-content: space-between;
   background-color: var(--gray);
   height: 100%;
-  width: 22vw;
+  width: 30vw;
   transition: all 0.8s ease-in-out;
 }
 .cat_img_card1:hover,
@@ -288,17 +288,20 @@
   left: 50%;
   transform: translate(-50%, 0%);
   background-color: white;
+  transition: 0.5s ease-in-out !important;
 }
 .op_lower_inner {
+  overflow-y: scroll;
   /* background-color: blanchedalmond; */
   position: relative;
-  width: 85%;
+  width: 100%;
   height: 90%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 .op_lower_content {
+  line-height: 1rem;
   position: relative;
   width: 100%;
   height: 10vh;
@@ -311,17 +314,32 @@
   position: relative;
   width: 100%;
   height: 100%;
-  /* display: flex;
-  flex-direction: row;
-  justify-content: space-between; */
   align-items: center;
   border-bottom: 0.5px solid rgba(128, 128, 128, 0.726);
 }
+.line:last-child {
+  border-bottom: none !important;
+}
+.op_lower_wrapper_fade {
+  background-color: transparent !important;
+}
+.op_lower_inner::-webkit-scrollbar {
+  width: 0.3rem;
+}
+.op_lower_inner::-webkit-scrollbar-track {
+  background-color: #f1f1f1 !important;
+}
+.op_lower_inner::-webkit-scrollbar-thumb {
+  background-color: #007bff !important;
+  border-radius: 10rem;
+}
 .op_view_more {
+  cursor: pointer;
   padding: 0.5rem 1rem;
-  font-size: 10px;
+  font-size: 0.8rem;
   background-color: var(--blue);
   color: white;
   border: 0 0 0 0;
+  transition: 0.5s ease-in-out !important;
 }
 /* end opennig section */
