--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@
   line-height: 1rem;
   position: relative;
   width: 100%;
-  height: 10vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
