--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@
   position: absolute;
   width: 75vw;
   height: 50vh;
-  top: -20%;
+  top: -40%;
   left: 50%;
   transform: translate(-50%, 0%);
   background-color: white;
@@ -311,7 +311,8 @@
   align-items: center;
 }
 .op_lower_content .line {
-  font-size: 1.6vw;
+  padding: 1rem;
+  font-size: 2vw;
   position: relative;
   width: 100%;
   height: 100%;
