opening hours update 2

--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,11 @@
 .line:last-child {
   border-bottom: none !important;
 }
+.line_day {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 .op_lower_wrapper_fade {
   background-color: transparent !important;
 }
