--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
   height: 100vh;
   width: 100vw;
   object-fit: cover;
-  opacity: 0.7;
+  background-position: center;
+  opacity: 1;
 }
 
 .swiper-slide .caption {
