--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,8 @@
 .slider3 {
   height: 100vh;
   width: 100vw;
-  object-fit: cover;
+  background-size: contain;
   background-position: center;
-  opacity: 1;
 }
 
 .swiper-slide .caption {
