--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,7 @@
   flex-direction: column;
   justify-content: space-between;
   background-color: var(--gray);
+  -webkit-filter: grayscale(50%);
   height: 100%;
   width: 30vw;
   transition: all 0.8s ease-in-out;
@@ -226,7 +227,8 @@
 .cat_img_card1:hover,
 .cat_img_card2:hover,
 .cat_img_card3:hover {
-  background-color: rgb(25, 86, 156) !important;
+  background-color: var(--blue) !important;
+  -webkit-filter: grayscale(0%);
   transition: 0.6s;
   transform: scale(1.05);
 }
@@ -320,8 +322,8 @@
   align-items: center;
 }
 .op_lower_content .line {
-  padding: 1rem;
-  font-size: 1.5vw;
+  padding: 0.7rem;
+  /* font-size: 1.5vw; */
   position: relative;
   width: 100%;
   height: 90%;
