decreases images resolution

--- a/css/shop.css
+++ b/css/shop.css
@@ -2,7 +2,7 @@
 
 .shoping_side {
   position: relative;
-  background-image: url(../img/moritz-kindler-tOMZ8UTw6uM-unsplash.jpg);
+  background-image: url(../img/logo/logo.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
