--- a/css/shopping_cart.css
+++ b/css/shopping_cart.css
@@ -25,6 +25,10 @@ input[type='number']::-webkit-inner-spin-button {
   text-transform: capitalize;
   font-weight: 350;
 }
+
+.remove {
+  cursor: pointer;
+}
 /* contact sub */
 .contact_sub {
   width: 100vw;
