--- a/css/shop.css
+++ b/css/shop.css
@@ -16,7 +16,7 @@
 
 .catalog_sec {
   width: 100vw;
-  height: 100vh;
+  height: 70vh;
 }
 
 .cat_head_line {
@@ -26,11 +26,13 @@
 
 .cat_header {
   position: absolute;
-  top: 20%;
+  top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+.cat_header div {
+  background-color: #31d4ae !important;
+}
 .cat_container {
   width: 100vw;
   height: 100vh;
@@ -40,7 +42,7 @@
 .cat_img2 img,
 .cat_img3 img,
 .cat_img4 img {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   height: 260px;
 }
@@ -70,12 +72,10 @@
 }
 .most_sell_container img {
   position: relative;
-  object-fit: contain;
+  object-fit: cover;
   width: 100%;
   height: 75%;
   transition: all 0.2s ease-in-out;
-}
-.most_sell_container img:hover {
 }
 .most_sell_img_btn {
   position: relative;
@@ -111,6 +111,9 @@
   left: 50%;
   transform: translateX(-50%);
 }
+.most_sell_pricing h6 {
+  color: #31d4ae !important;
+}
 
 /* end of most sell */
 
@@ -130,6 +133,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .middle_screen_header {
@@ -152,9 +156,11 @@
 .middle_screen_btn:hover {
   cursor: pointer;
   /* transition: all 0.66s cubic-bezier(0.95, 0.05, 0.795, 0.035); */
-  background-color: var(--blue);
+  background-color: #31d4ae;
   border: 2px solid transparent;
+  box-shadow: 10px 10px 100px 10px rgb(49, 212, 174, 0.3);
 }
+
 /* end middle screen */
 
 /* contact sub */
