--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 70%;
   transform: translate(-50%, -50%);
 }
 .swiper-container .buttons-wrapper {
@@ -140,7 +141,7 @@
 .srv_slide_middle_msg {
   position: absolute;
   top: 60%;
-  left: 0;
+  right: 0;
   width: 50vw;
   height: 30vh;
   transform: translate(0%, -50%);
